Preload font to avoid flickering

--- a/integration/cdn/css/pl-1.0.3.css
+++ b/integration/cdn/css/pl-1.0.3.css
@@ -5,7 +5,7 @@
     format("woff2");
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    font-display: optional;
 }
 
 html, body {
